name:                darby
version:             0.0.0
description:         Simple music shuffler
synopsis:            Simple music shuffler
homepage:            https://github.com/cronokirby/darby
bug-reports:         https://github.com/cronokirby/darby/issues
license:             MIT
license-file:        LICENSE
author:              Lúcás Meier
maintainer:          cronokirby@gmail.com
copyright:           2018 Lúcás Meier
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.4.3

source-repository head
  type:                git
  location:            https://github.com/cronokirby/darby.git

library
  hs-source-dirs:      src
  exposed-modules:     Darby
                       Darby.Context
                       Darby.Playlist
  ghc-options:         -Wall
  build-depends:       
      base-noprelude       >= 4.11   && < 5
    , array                >= 0.5    && < 0.6
    , directory            >= 1.3    && < 1.4
    , optparse-applicative >= 0.14.2 && < 0.15
    , random               >= 1.1    && < 1.2
    , relude               >= 0.4.0  && < 0.5
    , text                 >= 1.2    && < 1.3
  default-language:    Haskell2010
  default-extensions:
      OverloadedStrings
      NoImplicitPrelude

executable darby
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
      base-noprelude
    , darby
    , relude
  default-language:    Haskell2010
  default-extensions:
      OverloadedStrings
      NoImplicitPrelude


test-suite darby-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base-noprelude
    , hspec
    , darby
    , directory
    , relude
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
      NoImplicitPrelude
